# api

./: .gitignore  .pre-commit-config.yaml  Pipfile  main.py  poetry.toml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  update-deps.yml
api/: app.py  app_state.py  log.py  state.py  state_test.py
api/clients/: vercel_blob.py  vercel_blob_test.py
api/clients/vercel/: __init__.py  blob.py  blob_errors.py  blob_errors_test.py  blob_test.py
api/middleware/: __init__.py  cors.py  cors_test.py  state.py  state_test.py
api/routes/: __init__.py  coctails.py  coctails_test.py  commons.py  conftest.py  file_storage.py  file_storage_test.py  glasses.py  glasses_test.py  info.py  info_test.py  ingridients.py  ingridients_test.py
api/storage/: __init__.py  client.py  client_test.py  coctails_storage.py  coctails_storage_test.py  commons.py  commons_test.py  conftest.py  glass_storage.py  glass_storage_test.py  glasses_storage.py  ingridients_storage.py  ingridients_storage_test.py  storage.py  storage_test.py
api/storage/blob_storage/: __init__.py  base.py  local.py  local_test.py  vercel.py  vercel_test.py
api/storage/models/: __init__.py  base.py  base_test.py  documents.py  schemas.py
coctails_api/: app.py
coctails_api/routes/: __init__.py  conftest.py  info.py  info_test.py
