[tool.poetry]
name = "coctails-api"
version = "0.2.0"
description = ""
authors = ["Dmitry Erlikh <derlih@gmail.com>"]
readme = "README.md"
packages = [{ include = "api" }]
exclude = ["**/*_test.py", "**/conftest.py"]


[tool.poetry.dependencies]
# Must be in sync with version used in CI
python = "~3.11"

fastapi = "^0.104.1"
pyhumps = "^3.8.0"
motor = "^3.3.2"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.3"
pre-commit = "^3.5.0"

pipenv = "^2023.11.15"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }

httpx = "^0.25.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

mongomock-motor = "^0.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
run = "poetry run python ./main.py"

lint = "poetry run pre-commit run --all-files"

test = "poetry run pytest"
test-ci = "poetry run poe test --cov=api --cov-report=xml"
test-cov = "poetry run poe test --cov=api --cov-report=term-missing --cov-report=html"

update-deps = "poetry update"
update-linters = "poetry run pre-commit autoupdate"

bump-patch = "poetry version --next-phase patch"
bump-minor = "poetry version --next-phase minor"
bump-major = "poetry version --next-phase major"

generate-pipfile = [
    { cmd = "poetry export --without-hashes --output requirements.txt" },
    { cmd = "pipenv lock" },
    { cmd = "rm requirements.txt" },
]


[tool.pytest.ini_options]
python_files = "*_test.py"
asyncio_mode = "auto"
log_cli = false


[tool.black]
preview = true


[tool.ruff]
line-length = 88


[tool.isort]
profile = "black"


[tool.mypy]
exclude = "(.*_test|conftest)\\.py$"
strict = true


[tool.coverage.run]
omit = ["*_test.py", "*/conftest.py"]
branch = true

[tool.coverage.report]
exclude_lines = ["\\.\\.\\."]
