[tool.poetry]
name = "coctails-api"
version = "0.3.0"
description = ""
authors = ["Dmitry Erlikh <derlih@gmail.com>"]
readme = "README.md"
packages = [{ include = "api" }]
exclude = ["**/*_test.py", "**/conftest.py"]


[tool.poetry.dependencies]
# Must be in sync with version used in CI
python = "~3.9"

fastapi = "^0.104.1"
python-multipart = "^0.0.6"

pyhumps = "^3.8.0"
motor = "^3.3.2"
httpx = "^0.25.1"
yarl = "^1.9.4"


[tool.poetry.group.dev.dependencies]
# CI tooling
poethepoet = "^0.24.3"
pipenv = "^2023.11.15"

# Linters
pre-commit = "^3.5.0"
mypy = "^1.7.1"
motor-types = "^1.0.0b3"

# Local run
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }

# Tests
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

mongomock-motor = "^0.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
run = { shell = "USE_MONGOMOCK=1 poetry run python ./main.py" }

lint = [
    { shell = "poetry run pre-commit run --all-files || poetry run pre-commit run --all-files" },
    { cmd = "mypy --install-types --non-interactive ." },
]

test = "poetry run pytest"
test-ci = "poetry run poe test --cov=api --cov-report=xml"
test-cov = "poetry run poe test --cov=api --cov-report=term-missing --cov-report=html"

update-deps = "poetry update"
update-linters = "poetry run pre-commit autoupdate"

bump-patch = "poetry version --next-phase patch"
bump-minor = "poetry version --next-phase minor"
bump-major = "poetry version --next-phase major"


[tool.pytest.ini_options]
python_files = "*_test.py"
asyncio_mode = "auto"
log_cli = false


[tool.black]
preview = true


[tool.ruff]
line-length = 88


[tool.isort]
profile = "black"


[tool.mypy]
exclude = "(.*_test|conftest)\\.py$"
strict = true


[tool.coverage.run]
omit = ["*_test.py", "*/conftest.py"]
branch = true

[tool.coverage.report]
exclude_lines = ["\\.\\.\\."]

[tool.pylint.MASTER]
ignore-paths = ["^.*_test.py$", "^.*/conftest.py$"]
disable = [
    "E0401", # Import errors in pre-commmit env
    "C",     # Docstring checks
    "R0903", # Too few public methods
]

[tool.pylint.similarities]
min-similarity-lines = 10
